--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
 
   <!-- css link -->
-  <link rel="stylesheet" href="css/practices.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/pracResponsive.css">
 
   <!-- googleFont link -->
