--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   <!-- font awesome link -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
 
-  <title>Hello, world!</title>
+  <title>Welcome to Finix</title>
+  <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon">
 </head>
 
 <body>
